# PICO_MR_AI_Assistant

./: .gitignore  generate_structure.py  project_structure.txt  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/cnit355/finalproject/irisagentc/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/cnit355/finalproject/irisagentc/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/cnit355/finalproject/irisagentc/: ExampleUnitTest.java
